# AgroProject

./: .gitattributes  .gitignore  README.md  dashboard.py  requirements.txt  setup.cfg
.streamlit/: config.toml
config/: config.ini
docs/: PROJECT_STRUCTURE.md
models/: __init__.py  make_brain.py  make_flood_brain.py  make_heatwave_brain.py
pages/: 1_Relief_Brain.py  2_Tactical_Engine.py  3_Market_Analysis.py  4_Crop_Recommendation.py  5_Weather_Intelligence.py  6_Risk_Alerts.py
src/: __init__.py  admin.py  app_v2.py  bot.py
utils/: __init__.py  gemini.py  ui.py
