[metadata]
name = agrosync
version = 1.0.0
description = Agricultural Disaster Prediction and Relief Management System
author = Your Team
author_email = your.email@example.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    streamlit
    pandas
    numpy
    plotly
    flask
    joblib
    scikit-learn
    requests
    geopy
    folium
    streamlit-folium

[options.packages.find]
where = .
include = src*, models*, utils*
